[gd_scene load_steps=8 format=3 uid="uid://c0tr8a2mpslc7"]

[ext_resource type="Script" path="res://game_objects/traps/trap.gd" id="1_16p3y"]
[ext_resource type="Texture2D" uid="uid://bfdrp2bndrmhp" path="res://assets/sprites/triangle_trap.png" id="1_cgiph"]
[ext_resource type="Shader" path="res://assets/shaders/sprite_glow.gdshader" id="1_fjpcf"]
[ext_resource type="AudioStream" uid="uid://0iaj4bs814wj" path="res://assets/sfx/player_hit.wav" id="4_c24o4"]
[ext_resource type="AudioStream" uid="uid://b5kijghwd4wua" path="res://assets/sfx/player_hit_reverse.wav" id="5_o65lh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ktkp2"]
shader = ExtResource("1_fjpcf")
shader_parameter/dissolve_value = 1.0
shader_parameter/emission_power = 2.0
shader_parameter/color = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h53hw"]
size = Vector2(32, 32)

[node name="TriangleTrap" type="Node2D"]
script = ExtResource("1_16p3y")
max_scale = 1.0

[node name="TriangleTrap" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ktkp2")
position = Vector2(0, -13)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_cgiph")

[node name="Area2D" type="Area2D" parent="TriangleTrap"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriangleTrap/Area2D"]
shape = SubResource("RectangleShape2D_h53hw")

[node name="WaitTime" type="Timer" parent="."]

[node name="HitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_c24o4")
pitch_scale = 0.5
bus = &"SFX"

[node name="AudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_o65lh")
volume_db = -7.0
max_distance = 1000.0
bus = &"SFX"

[connection signal="timeout" from="WaitTime" to="." method="_on_wait_time_timeout"]
